# NOMone-WASM-Machine

./: .gitignore  .gitmodules  Speed machine suggested optimizations.txt  Tasks.txt
Android/WASM_Machine/app/: CMakeLists.txt  build.gradle
Android/WASM_Machine/jni_headers/: .gitignore
Logcat/: Logcat.java
Samples/: .gitignore
Samples/ByteVector/Linux/: Makefile  test.sh
Samples/ByteVector/Src/: ByteVector.c
Samples/HelloWasm/Android/HelloWasm/app/: CMakeLists.txt  build.gradle
Samples/HelloWasm/Android/HelloWasm/app/src/main/: AndroidManifest.xml
Samples/HelloWasm/Android/HelloWasm/app/src/main/java/com/nomone/wasm_machine/samples/hello_wasm/: MainActivity.java
Samples/HelloWasm/Linux/: Makefile  test.sh
Samples/HelloWasm/Src/: HelloWasm.c
Samples/HelloWasm/Wasm/: HelloWasm.wasm  HelloWasm.wat  Makefile  test.sh
Samples/HelloWasm/app/: CMakeLists.txt  build.gradle
Samples/String/Linux/: Makefile  test.sh
Samples/String/Src/: String.c
Samples/Time/Linux/: Makefile  test.sh
Samples/Time/Src/: Time.c
Samples/Vector/Linux/: Makefile  test.sh
Samples/Vector/Src/: Vector.c
Src/: ByteVector.c  NByteVector.c  NCString.c  NError.c  NString.c  NSystem.c  NTime.c  NVector.c  ReferenceMachine.c  Vector.c  WasmMachine.c  wasm_machine.c
Src/Backends/Linux/: NSystemUtils.c
Src/Backends/Wasm/: NSystemUtils.c
Src/Includes/: ByteVector.h  NByteVector.h  NCString.h  NError.h  NString.h  NSystem.h  NSystemUtils.h  NTime.h  NTypes.h  NVarArgs.h  NVector.h  ReferenceMachine.h  Vector.h  WasmMachine.h
Src/includes/: WasmMachine.h
Study/: .gitignore  1.wat  compile.sh
Study/Samples/Add/: compile.sh  result.wasm  src.c
app/: CMakeLists.txt
jni_headers/: MainActivity.java
(+32 files in other folders)
